[package]
name = "genetic_conditions"
version = "0.1.0"
edition = "2021"
description = "Consolidated genetic condition checks: immune, exposure, inflammation, sulfur, rare diseases"
authors = ["Reaction Modeler"]
license = "MIT"

[lib]
name = "genetic_conditions"
path = "src/lib.rs"

[[bin]]
name = "genetic-report-html"
path = "src/bin/report_html.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
